- fixed 'wrap'-ing of the taxtarea controls - fixed button stata in the yellow line - make sure prepare_exporter_file is not charching when trying to display data for a non sample based project
git-svn-id: http://svn.dnalc.org/ga/pipeline@260 8e20c4c2-b435-4367-b5b9-847ebbf7797d

--- a/vhosts/pipeline.dnalc.org/htdocs/css/scontent.css
+++ b/vhosts/pipeline.dnalc.org/htdocs/css/scontent.css
@@ -305,8 +305,9 @@
 	font-size:.8em; font-family:  monaco;
 	text-transform: uppercase;
 	letter-spacing: .2em;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	/*overflow-y: scroll;
+	overflow-x: hidden;*/
+	
 }
 
 .conStylized_box3 {
@@ -332,13 +333,15 @@
 }
 .conStylized_box5 {
 	float:left;
-	border: .1em; border-style: solid; border-color: #669900; color: #996600;
+	border: .1em; border-style: solid; border-color: #669900; 
+	color: #996600;
 	width:360px;
 	margin:2px 10px 0px 20px;
 	padding: 4px;
 	font-size:.95em; 
-	overflow-y: scroll;
-	overflow-x: hidden;
+	/*overflow-y: scroll;
+	overflow-x: hidden;*/
+	
 }
 .conNewPro_smallContainer{
 	width: 146px;
